--- a/index.html
+++ b/index.html
@@ -4,209 +4,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flagak - Health and Beauty</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Flagak - Shop Local</title>
+    <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="categories.css">
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="vendors.css">
+    <link rel="stylesheet" href="mission.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 
 <body>
-    <!-- <div class="navbar floating" id="navbar">
-        <div class="logo">
-            <img src="assets/images/flagaklogo.png" alt="Logo" />
+    <section class="nav">
+        <div class="nav-logo">
+            <img src="assets/images/flagakw.png">
         </div>
-        <div class="menu">
-            <a class="alanding" href="#landing">Home</a>
-            <a class="aabout" href="#about">About Us</a>
-        </div>
-        <div class="contact">
-            <button class="contact-btn">Contact Us<span class="arrow">→</span></button>
-        </div>
-    </div> -->
-
-    <section id="landing">
-        <img class="flag" src="assets/images/flag.png">
-        <div class="landing-heading">
-            <div class="heading-logo">
-                <img src="assets/images/flagaklogow.png">
-            </div>
-            <div class="heading-links">
-                <button class="heading-contact-btn">Contact Us</button>
-                <a href="https://www.facebook.com/share/1DcA54X5ep/?mibextid=wwXIfr"><img
-                        src="assets/icons/facebook.svg"></a>
-                <a href="https://www.instagram.com/flagak.eg?igsh=MWpjN2FqcXVoendwbQ=="><img
-                        src="assets/icons/instagram.svg"></a>
-                <a href="https://www.tiktok.com/@flagak?_t=ZS-8tfQjJsP8Ui&_r=1"><img src="assets/icons/tiktok.svg"></a>
-                <a href="https://www.linkedin.com/company/flagak/"><img src="assets/icons/linkedin.svg"></a>
-            </div>
-        </div>
-        <div class="landing-body">
-            <div class="landing-text">
-                <div class="slogan-logo">
-                    <div class="text-logo">
-                        <img src="assets/images/Flagakw.png">
-                    </div>
-                    <!-- <p class="arabic">من قلب مصر لكل حتة في مصر</p> -->
-                    <p class="slogans">Where local meets the world</p>
-                </div>
-                <div class="downloaders">
-                    <div class="downloaders-logo-and-text">
-                        <img class="logo" src="assets/images/flagaklogo.png">
-                        <p>Download <span class="bold-text">Flagak</span> app now!</p>
-                    </div>
-                    <div class="downloaders-links">
-                        <a href="https://apps.apple.com/eg/app/flagak/id6474215409"><img class="store"
-                                src="assets/images/appstore.png"></a>
-                        <a href="https://play.google.com/store/apps/details?id=com.flagak.flagak&hl=en"><img
-                                class="store" src="assets/images/playstore.png"></a>
-                    </div>
-                </div>
-                <!-- <div class="sell-points">
-                    <div class="sell-point">
-                        <img src="assets/icons/fastdelivery.svg">
-                        <p>Fast Delivery</p>
-                    </div>
-                    <div class="sell-point">
-                        <img src="assets/icons/fullcart.svg">
-                        <p>Everything Here</p>
-                    </div>
-                    <div class="sell-point">
-                        <img src="assets/icons/flag.svg">
-                        <p>All Local</p>
-                    </div>
-                </div> -->
-            </div>
-            <div class="landing-image">
-                <img src="assets/images/landingmockup.png">
-            </div>
+        <div class="nav-links">
+            <a href="https://www.facebook.com/share/1DcA54X5ep/?mibextid=wwXIfr"><img
+                    src="assets/icons/facebook.svg"></a>
+            <a href="https://www.instagram.com/flagak.eg?igsh=MWpjN2FqcXVoendwbQ=="><img
+                    src="assets/icons/instagram.svg"></a>
+            <a href="https://www.tiktok.com/@flagak?_t=ZS-8tfQjJsP8Ui&_r=1"><img src="assets/icons/tiktok.svg"></a>
+            <a href="https://www.linkedin.com/company/flagak/"><img src="assets/icons/linkedin.svg"></a>
         </div>
     </section>
 
-    <section id="categories">
-        <img class="slogan-img" src="assets/images/slogan.png">
-        <h2>Categories</h2>
-        <img src="assets/images/categories.png">
-        <!-- <div class="cat-div">
-            <div class="image-37-parent">
-                <img class="image-37-icon" alt="" src="assets/images/fashion.jpeg">
-                <img class="image-36-icon" alt="" src="assets/images/sport.jpeg">
-                <img class="image-35-icon" alt="" src="assets/images/bag.jpeg">
-                <img class="image-39-icon" alt="" src="assets/images/oils.jpeg">
-                <img class="image-40-icon" alt="" src="assets/images/plant.jpeg">
-                <img class="image-38-icon" alt="" src="assets/images/plates.jpeg">
-                <div class="rectangle-parent">
-                    <div class="group-child">
-                    </div>
-                    <b class="accessories">Accessories</b>
-                </div>
-                <div class="rectangle-group">
-                    <div class="group-child">
-                    </div>
-                    <b class="jewelry">Jewelry</b>
-                </div>
-                <div class="rectangle-container">
-                    <div class="group-child">
-                    </div>
-                    <b class="accessories">Home Decor</b>
-                </div>
-                <div class="group-div">
-                    <div class="group-child">
-                    </div>
-                    <b class="jewelry">Fashion</b>
-                </div>
-                <b class="sports">Sports</b>
-                <b class="pets-products">Pets Products</b>
-                <b class="foot-wear">Foot Wear</b>
-                <b class="kitchen-items">Kitchen Items</b>
-                <b class="bathroom-products">Bathroom Products</b>
-                <div class="rectangle-parent1">
-                    <div class="group-child">
-                    </div>
-                    <b class="health-beauty">Health & Beauty</b>
-                </div>
+    <section class="landing">
+        <img class="absolut-img" id="pharoah" src="assets/images/pharoah.png">
+        <div class="section-heading">
+            <img src="assets/images/line.png">
+            <p>SEARCH, FIND, SHOP, LOCAL</p>
+        </div>
+        <h1 class="section-title">Where Local Meets The</br>World</h1>
+        <div class="downloaders">
+            <p class="downloaders-p">DOWNLOAD <span><img src="assets/images/Flagakw.png"></span> APP NOW!</p>
+            <div class="downloaders-links">
+                <a href="https://apps.apple.com/eg/app/flagak/id6474215409"><img class="store"
+                        src="assets/images/appstore.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.flagak.flagak&hl=en"><img class="store"
+                        src="assets/images/playstore.png"></a>
             </div>
-        </div> -->
+        </div>
+        <img class="slogan" src="assets/images/slogan.png">
+        <img class="absolut-img" id="landing-mockup" src="assets/images/landingmockup.png">
     </section>
 
-    <section id="about">
-        <div class="text">
-            <h2>About</h2>
-            <p>FLAGAK is an Egyptian mobile application
-                dedicated to celebrating and supporting local
-                brands. We bring together the best of
-                Egyptian vendors under one unified mobile
-                application, offering an extensive range of
-                products across 10 diverse categories. Our
-                goal is to cater to the unique tastes and needs
-                of customers while fostering a space where
-                local craftsmanship and innovation thrive.
+    <section class="categories">
+        <div class="section-heading">
+            <img src="assets/images/line.png">
+            <p>Whatever you seek, you will find.</p>
+        </div>
+        <h1 class="section-title">Shop Our Most</br>Popular Categories</h1>
+        <div class="categories-images">
+            <img class="categories-img" src="assets/images/categories.png">
+            <img class="alamak-img" src="assets/images/alamak.png">
+        </div>
+    </section>
+
+    <section class="body about">
+        <img class="absolut-img" id="pyramids" src="assets/images/pyramids.png">
+        <div class="body-text-content">
+            <div class="section-heading">
+                <img src="assets/images/line.png">
+                <p>WHO IS FLAGAK ?</p>
+            </div>
+            <h1 class="section-title">About Us</h1>
+            <p>An Egyptian mobile app that supports local brands by uniting vendors</br>under one platform, with diverse
+                product categories.</p>
+        </div>
+        <img class="mockup" src="assets/images/about-mockup.png">
+    </section>
+
+    <section class="body vendors">
+        <img class="absolut-img" id="wings" src="assets/images/wings.png">
+        <img class="mockup" src="assets/images/vendors-mockup.png">
+        <div class="body-text-content">
+            <div class="section-heading">
+                <img src="assets/images/line.png">
+                <p>GROW IN THE MARKET</p>
+            </div>
+            <h1 class="section-title">Vendors</h1>
+            <p>Egyptian brands can easily create an account and start selling. Vendors
+                can upload products, manage orders, track sales, assign admins, and
+                access tools and insights to help grow their business and succeed in a
+                competitive market.</p>
+        </div>
+    </section>
+
+    <section class="body shoppers">
+        <div class="body-text-content">
+            <div class="section-heading">
+                <img src="assets/images/line.png">
+                <p>WHERE YOU GO IS THE KEY</p>
+            </div>
+            <h1 class="section-title">Shoppers</h1>
+            <p>Speed up your search for local products by exploring our fine collection of local brands, all in one app.
             </p>
         </div>
-        <div class="image">
-            <img src="assets/images/phoneabout.png">
-        </div>
+        <img class="mockup" src="assets/images/shoppers-mockup.png">
     </section>
 
-    <section id="vendors">
-        <div class="text">
-            <h2>Vendors</h2>
-            <p>FLAGAK empowers Egyptian businesses by providing an
-                intuitive and user-friendly platform that simplifies the
-                selling process. Vendors can easily upload their
-                products, manage orders efficiently, and connect with a
-                broad audience of local shoppers. Beyond technology,
-                we offer tools, resources, and insights to help vendors
-                grow their businesses and establish a strong presence
-                in the market. We’re here to ensure that every Egyptian
-                vendor has the opportunity to succeed in the
-                competitive e-commerce landscape.
-            </p>
-        </div>
-        <div class="image">
-            <img src="assets/images/vendorsphone.png">
-        </div>
-    </section>
-
-    <section id="shoppers">
-        <div class="text">
-            <h2>Shoppers</h2>
-            <p>At FLAGAK, we are redefining the shopping
-                experience by bringing authentic Egyptian products
-                directly to your fingertips. With a wide variety of
-                items from trusted local vendors, shoppers can
-                enjoy a seamless and secure purchasing journey.
-                Our platform also offers convenient consumer
-                financing options to make quality local goods more
-                accessible. By choosing FLAGAK, you unlock the
-                easiest and most convenient way to shop for
-                authentic Egyptian products.
-            </p>
-        </div>
-        <div class="image">
-            <img src="assets/images/shoppersphone.png">
-        </div>
-    </section>
-
-    <section id="mission">
-        <div class="text">
-            <h2>Mission</h2>
-            <p>Our mission is to create a vibrant and inclusive
-                ecosystem that uplifts Egyptian vendors while making
-                local shopping easy, enjoyable, and meaningful. By
-                connecting local businesses with wider audiences, we
-                aim to showcase the beauty and quality of Egyptian
-                craftsmanship on a national and global scale.
-            </p>
-        </div>
-        <div class="image">
-            <img src="assets/images/alamak.png">
+    <section class="body mission">
+        <img class="handshake-img" src="assets/images/handshake.png">
+        <div class="body-text-content">
+            <div class="section-heading">
+                <img src="assets/images/line.png">
+                <p>AIMING TO SHOW BEAUTY</p>
+            </div>
+            <h1 class="section-title">Mission</h1>
+            <p>To create a vibrant and inclusive ecosystem that uplifts Egyptian vendors
+                while making local shopping easy, enjoyable, and meaningful. By
+                connecting local businesses with wider audiences, we aim to showcase the
+                beauty and quality of Egyptian craftsmanship.</p>
         </div>
     </section>
 
     <footer>
-        <div class="logo">
-            <img src="assets/images/flagaklogo.png">
-        </div>
+        <img class="slogan" src="assets/images/slogan.png">
         <div class="socials">
             <a href="https://www.facebook.com/share/1DcA54X5ep/?mibextid=wwXIfr"><img
                     src="assets/icons/facebook.svg"></a>
@@ -217,9 +132,4 @@
         </div>
         <p>&copy; 2025 FLAGAK. All Rights Reserved.</p>
     </footer>
-
-    <script src="nav.js"></script>
-    <script src="scroll-buttons.js"></script>
 </body>
-
-</html>
