--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <section class="nav">
         <div class="nav-logo">
-            <img src="assets/images/flagakw.png">
+            <img src="assets/images/Flagakw.png">
         </div>
         <div class="nav-links">
             <a href="https://www.facebook.com/share/1DcA54X5ep/?mibextid=wwXIfr"><img
