--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flagak - Shop Local</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/flagaklogo.png">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="landing.css">
