desktop view fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="assets/images/line.png">
             <p>SEARCH, FIND, SHOP, LOCAL</p>
         </div>
-        <h1 class="section-title">Where Local Meets The</br>World</h1>
+        <h1 class="section-title">Where Local Meets The World</h1>
         <div class="downloaders">
             <p class="downloaders-p">DOWNLOAD <span><img src="assets/images/Flagakw.png"></span> APP NOW!</p>
             <div class="downloaders-links">
@@ -131,6 +131,7 @@
             <a href="https://www.tiktok.com/@flagak?_t=ZS-8tfQjJsP8Ui&_r=1"><img src="assets/icons/tiktok.svg"></a>
             <a href="https://www.linkedin.com/company/flagak/"><img src="assets/icons/linkedin.svg"></a>
         </div>
-        <p>&copy; 2025 FLAGAK. All Rights Reserved.</p>
+        <p class="footer-p">For all inquiries you can contact us through info@flagak.com</p>
+        <p class="footer-p">&copy; 2025 FLAGAK. All Rights Reserved.</p>
     </footer>
 </body>
