--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <a href="https://www.tiktok.com/@flagak?_t=ZS-8tfQjJsP8Ui&_r=1"><img src="assets/icons/tiktok.svg"></a>
             <a href="https://www.linkedin.com/company/flagak/"><img src="assets/icons/linkedin.svg"></a>
         </div>
-        <p class="footer-p">For all inquiries you can contact us through info@flagak.com</p>
+        <p class="footer-p">For all inquiries you can contact us through <a href="mailto:info@flagak.com">info@flagak.com</a></p>
         <p class="footer-p">&copy; 2025 FLAGAK. All Rights Reserved.</p>
     </footer>
 </body>
