categories heading all cap

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="categories">
         <div class="section-heading">
             <img src="assets/images/line.png">
-            <p>Whatever you seek, you will find.</p>
+            <p>WHATEVER YOU SEEK, YOU WILL FIND.</p>
         </div>
         <h1 class="section-title">Shop Our Most</br>Popular Categories</h1>
         <div class="categories-images">
