remove all </br>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="assets/images/line.png">
             <p>WHATEVER YOU SEEK, YOU WILL FIND.</p>
         </div>
-        <h1 class="section-title">Shop Our Most</br>Popular Categories</h1>
+        <h1 class="section-title">Shop Our Most Popular Categories</h1>
         <div class="categories-images">
             <img class="categories-img" src="assets/images/categories.png">
             <img class="alamak-img" src="assets/images/alamak.png">
@@ -71,7 +71,7 @@
                 <p>WHO IS FLAGAK ?</p>
             </div>
             <h1 class="section-title">About Us</h1>
-            <p>An Egyptian mobile app that supports local brands by uniting vendors</br>under one platform, with diverse
+            <p>An Egyptian mobile app that supports local brands by uniting vendors under one platform, with diverse
                 product categories.</p>
         </div>
         <img class="mockup" src="assets/images/about-mockup.png">
