--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img class="absolut-img" id="pharoah" src="assets/images/pharoah.png">
         <div class="section-heading">
             <img src="assets/images/line.png">
-            <p>SEARCH. FIND. SHOP LOCAL</p>
+            <p>SEARCH. FIND. SHOP LOCAL.</p>
         </div>
         <h1 class="section-title">Where Local Meets The World</h1>
         <div class="downloaders">
