--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="assets/images/line.png">
             <p>WHATEVER YOU SEEK, YOU WILL FIND.</p>
         </div>
-        <h1 class="section-title">Shop Our Most Popular Categories</h1>
+        <h1 class="section-title">Shop Our Most Popular</br>Categories</h1>
         <div class="categories-images">
             <img class="categories-img" src="assets/images/categories.png">
             <img class="alamak-img" src="assets/images/alamak.png">
