--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                         src="assets/images/playstore.png"></a>
             </div>
         </div>
-        <img class="slogan" src="assets/images/slogan.png">
+        <!-- <img class="slogan" src="assets/images/slogan.png"> -->
+        <p class="sloganp">من قلب مصر لكل حتة في مصر</p>
         <img class="absolut-img" id="landing-mockup" src="assets/images/landingmockup.png">
     </section>
 
@@ -123,6 +124,7 @@
 
     <footer>
         <img class="slogan" src="assets/images/slogan.png">
+
         <div class="socials">
             <a href="https://www.facebook.com/share/1DcA54X5ep/?mibextid=wwXIfr"><img
                     src="assets/icons/facebook.svg"></a>
