--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         src="assets/images/playstore.png"></a>
             </div>
         </div>
-        <!-- <img class="slogan" src="assets/images/slogan.png"> -->
-        <p class="sloganp">من قلب مصر لكل حتة في مصر</p>
+        <img class="slogan" src="assets/images/slogan.png">
+        <!-- <p class="sloganp">من قلب مصر لكل حتة في مصر</p> -->
         <img class="absolut-img" id="landing-mockup" src="assets/images/landingmockup.png">
     </section>
 
