--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </h1>
             <p class="slogan-small">
                 <span class="english">Shop Local, Enjoy Global -</span> 
+                &nbsp
                 <span class="highlight-arabic arabic">ادعم المحلي، واستمتع بجودة عالمية</span>
             </p>
             <div class="mockups">
@@ -54,7 +55,9 @@
     <section class="why">
         <img class="doodle2" src="assets/images/doodle2.png">
         <h2 class="why-text">
-            <span class="english">WHY FLAGAK</span> <span class="arabic">ليه فلاجك</span>
+            <span class="english">WHY FLAGAK</span>
+            &nbsp
+            <span class="arabic">ليه فلاجك</span>
         </h2>
         <div class="features">
             <div class="feature">
@@ -75,8 +78,15 @@
     </section>
     <section class="categories">
         <img class="bgbags" src="assets/images/bgbags.png">
-        <h2>SHOP BY CATEGORY</h2>
-        <h2 class="arabic">تسوّق أشهر الفئات لدينا</h2>
+        <h2>
+            <span class="english">
+                SHOP BY CATEGORY
+            </span>
+            &nbsp
+            <span class="arabic inline-span">
+                تسوّق أشهر الفئات لدينا
+            </span>
+        </h2>
         <div class="carousel-container" id="carouselContainer">
             <div class="carousel-track" id="carouselTrack">
                 <div class="carousel-card">
@@ -115,7 +125,9 @@
         <img class="doodle" src="assets/images/doodle.png">
         <img class="alamak" src="assets/images/alamak2.png">
         <h2>
-            <span class="english">JOIN US</span> <span class="arabic">أنضموا لنا</span>
+            <span class="english">JOIN US</span>
+            &nbsp
+            <span class="arabic">أنضموا لنا</span>
         </h2>
         <div class="user-cards">
             <div class="user-card">
@@ -139,7 +151,9 @@
     <section class="about">
         <img class="tag" src="assets/images/tag.png">
         <h2>
-            <span class="english">ABOUT US</span> <span class="arabic">اعرف عنا</span>
+            <span class="english">ABOUT US</span>
+            &nbsp
+            <span class="arabic">اعرف عنا</span>
         </h2>
         <p>
             Flagak connects you to the best Egyptian brands with a seamless shopping experience.
