--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             </h1>
             <p class="slogan-small">
                 <span class="english">Shop Local, Enjoy Global -</span> 
-                &nbsp
                 <span class="highlight-arabic arabic">ادعم المحلي، واستمتع بجودة عالمية</span>
             </p>
             <div class="mockups">
@@ -57,7 +56,7 @@
         <h2 class="why-text">
             <span class="english">WHY FLAGAK</span>
             &nbsp
-            <span class="arabic">ليه فلاجك</span>
+            <span class="arabic inline-span">ليه فلاجك</span>
         </h2>
         <div class="features">
             <div class="feature">
@@ -127,7 +126,7 @@
         <h2>
             <span class="english">JOIN US</span>
             &nbsp
-            <span class="arabic">أنضموا لنا</span>
+            <span class="arabic inline-span">أنضموا لنا</span>
         </h2>
         <div class="user-cards">
             <div class="user-card">
@@ -153,7 +152,7 @@
         <h2>
             <span class="english">ABOUT US</span>
             &nbsp
-            <span class="arabic">اعرف عنا</span>
+            <span class="arabic inline-span">اعرف عنا</span>
         </h2>
         <p>
             Flagak connects you to the best Egyptian brands with a seamless shopping experience.
