--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@
     <section class="categories">
         <img class="bgbags" src="assets/images/bgbags.png">
         <h2>
-            <span class="english">
-                SHOP BY CATEGORY
-            </span>
+            <span class="english">SHOP BY CATEGORY</span>
             &nbsp
-            <span class="arabic inline-span">
-                تسوّق أشهر الفئات لدينا
-            </span>
+            <span class="arabic inline-span">تسوّق أشهر الفئات لدينا</span>
         </h2>
         <div class="carousel-container" id="carouselContainer">
             <div class="carousel-track" id="carouselTrack">
