--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 FLAGAK. All Rights Reserved.</p>
         </div>
     </footer>
-    <script src="category.js"></script>
+<!--     <script src="category.js"></script> -->
 </body>
 
 </html>
